; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonfilenbionbio_linux.c_nbio_linux_begin_write.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonfilenbionbio_linux.c_nbio_linux_begin_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nbio_linux_t = type { i32 }

@IOCB_CMD_PWRITE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @nbio_linux_begin_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nbio_linux_begin_write(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.nbio_linux_t*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.nbio_linux_t*
  store %struct.nbio_linux_t* %5, %struct.nbio_linux_t** %3, align 8
  %6 = load %struct.nbio_linux_t*, %struct.nbio_linux_t** %3, align 8
  %7 = icmp ne %struct.nbio_linux_t* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load %struct.nbio_linux_t*, %struct.nbio_linux_t** %3, align 8
  %10 = load i32, i32* @IOCB_CMD_PWRITE, align 4
  %11 = call i32 @nbio_begin_op(%struct.nbio_linux_t* %9, i32 %10)
  br label %12

12:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @nbio_begin_op(%struct.nbio_linux_t*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
